--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
 </head>
 
-<body>
+<body class="bg-white dark:bg-blue-950">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
