--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body class="bg-white dark:bg-neutral-950">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <!-- <script src=""></script> -->
 </body>
 
 </html>
